Fix navbar name link adding extra padding/size

--- a/static/style.css
+++ b/static/style.css
@@ -106,6 +106,11 @@ body {
 	margin: 0px;
 }
 
+.navbar li h3 a {
+	display: inline;
+	padding: 0;
+}
+
 .mob-btn {
   display: none;
   float: right;
